src/objects/BA_INT_DATA_FAILED_POOL__c.object
<CustomObject>
    <description>This object will hold all records that failed the validation checks.</description>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>export_data__c</fullName>
        <label>Export Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>group_id__c</fullName>
        <label>Group ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>insert_time__c</fullName>
        <label>insert time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>job_id__c</fullName>
        <label>job id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>record_type__c</fullName>
        <label>record type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>run_for_date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sort_order__c</fullName>
        <label>sort order</label>
        <type>AutoNumber</type>
    </fields>
    <label>BA_INT_DATA_FAILED_POOL</label>
    <nameField>
        <label>Interface ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BA_INT_DATA_FAILED_POOL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>